--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,6 @@
 .login_from{
     margin: 0 auto;
-    width: 90%;
+    /* width: 90%; */
     /* background-color: yellow; */
     display: flex;
     justify-content: center;
@@ -9,11 +9,18 @@
   .login_cover{
       text-align: center;
   }
+  .login_cover h1{
+    margin-top: 48px;
+    font-weight: 400;
+    color: rgb(97, 97, 97);
+    
+}
   .login_fields{
       width: 60%;
       margin: 0 auto;
       padding-right: 25px;
       position:relative;
+      color: #2DBDFE;
      
       
   }
@@ -24,17 +31,26 @@
     color: gray;
 
   }
+  .log_box2 small{
+    margin-left: 130px;
+    list-style: none;
+  }
+  .log_box2 a{
+    text-decoration: none;
+    color: #2DBDFE;
+
+  }
 .login_part{
     width: 50%;
     /* background-color: tomato; */
-    color: #2DBDFE;
+    /* color: #2DBDFE; */
     margin-top: 70px;
     
     
   }
   
   .login_part img{
-    width: 50%;
+    width: 40%;
     text-align: center;
   }
   .log_box1{
@@ -55,7 +71,42 @@
     width: 100%;
    
 }
+.button_div{
+  text-align: center;
+}
+.button_div h3{
+  color: #2DBDFE;
+  font-weight: 400;
+
+  }
+  .button_div img{
+width: 30px;
+margin-right: 10px;
+margin-left: 10px;
+  }
+  .button_div a{
+text-decoration: none;
+  }
+.blue_btn{
+  padding: 15px 80px;
+  border: none;
+  border-radius: 50px;
+  margin:0 auto;
+  background-color: #7AE8FF;
+  margin-top: 40px;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  
+}
+
   .login_banner{
     width: 50%;
-    background-color: #61dafb;
+    background-color: #53C6EC;
+    padding: 20px;
+  }
+  .login_banner img{
+    width: 100%;
+    margin-top: 200px;
   }
