--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -54,6 +54,7 @@ display: flex;
 .signup_here{
 width: 60%;
 text-align: center;
+
 }
 .signup_here h1{
     font-size: 70px;
@@ -71,10 +72,32 @@ text-align: center;
     position: relative;
     width: 50%;
     margin: 0 auto;
+    margin-top: 35px;
+    
 }
 .signup_fields span{
     position: absolute;
    top: 7px;
    right: 0px;
+   color: #AEAEAE;
     
+}
+.sign_up h3{
+    color: #2DBDFE;
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 10px solid #2DBDFE;
+ 
+  
+}
+.sign_up a{
+    text-decoration: none;
+   
+}
+.bottom_bor{
+    width: 5%;
+    margin: 0 auto;
+    height: 1.5px;
+    background-color: #35D7E4;
+   margin-top: -20px;
 }
